--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "arangojs": "^9.2.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "~16.4.7",
+    "smtp-server": "^3.13.6",
     "tslib": "~2.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.1",
+    "@types/smtp-server": "^3.5.10",
     "nodemon": "^3.1.7",
     "ts-node": "~10.9.2",
     "tsc-alias": "~1.8.10",
